Fix Contextual Tasks UI composebox side panel left alignment
Aligns composebox to left. Purposely reverts previous CL that centers
the composebox in side panel:
https://chromium-review.git.corp.google.com/c/chromium/src/+/7675957

Demo: https://screencast.googleplex.com/cast/NjQ1MTA4OTYyMzc0NDUxMnxlNDU1ZGM4Mi1iMw
Bug: b:499300738
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7729426
Commit-Queue: Diana OuYang <dianaou@google.com>
Cr-Commit-Position: refs/heads/main@{#1610497}

--- a/chrome/browser/resources/contextual_tasks/app.css
+++ b/chrome/browser/resources/contextual_tasks/app.css
@@ -391,11 +391,6 @@ error-page {
   width: var(--composebox-width);
 }
 
-:host([is-ai-page_]:not([is-shown-in-tab_])) #composebox {
-  inset-inline-start: 0;
-  margin: 0 auto;
-}
-
 :host([is-zero-state_]) #composebox {
   animation: zero-state-intro 600ms ease
       forwards;
